--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
 	"short_name": "S-Messenger",
 	"name": "S-Messenger",
+	"description": "S-Messenger is the best and most secure solution for on-site and site-to-site messaging.",
+	"version": "1.2.5",
 	"icons": [
 	{
 		"src": "favicon.png",
@@ -8,6 +10,8 @@
 		"sizes": "512x512"
 	}
 	],
+	"manifest_version": 2,
+	"default_locale": "en",
 	"start_url": "/scom/s-messenger.html",
 	"background_color": "#000",
 	"display": "standalone",
